<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?back_primary"
    android:paddingHorizontal="16dp"
    tools:context="presentation.addTodoItem.AddTodoItemFragment">

    <ImageView
        android:id="@+id/addTodoItemCloseButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@null"
        android:focusable="true"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addTodoItemSaveText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/addTodoItemSave"
        android:textColor="?color_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addTodoItemEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginTop="24dp"
                android:autofillHints="Что надо сделать..."
                android:background="@drawable/bg_frame"
                android:elevation="2dp"
                android:hint="@string/addTodoItemEditTextHint"
                android:imeOptions="actionDone"
                android:minLines="3"
                android:padding="10dp"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/addTodoItemPriorityFrame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/addTodoItemPriorityTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addTodoItemPriorityTitle"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/addTodoItemPrioritySubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.3"
                    android:text="@string/low_priority_popup_menu"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:id="@+id/addTodoItemDividerPriority"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/addTodoItemDeadline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/addTodoItemDeadlineTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/addTodoItemDeadlineTitle"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/addTodoItemDeadlineSubtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/low_priority_popup_menu"
                        android:textColor="?color_blue"
                        android:textSize="14sp" />
                </LinearLayout>

                <Switch
                    android:id="@+id/addTodoItemDeadlineSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="26dp" />
            </FrameLayout>

            <View
                android:id="@+id/addTodoItemDividerDeadline"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/addTodoItemDeleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:dividerPadding="12dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addTodoItemDividerDeadline">

                <ImageView
                    android:id="@+id/addTodoItemDeleteIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_delete"
                    app:tint="?color_red" />

                <TextView
                    android:id="@+id/addTodoItemDeleteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="12dp"
                    android:text="@string/addTodoItemDeleteText"
                    android:textColor="?color_red" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>